
21 JUL 2024:
Fixed toolhead selection issue: selecting single mode will activate corresponding toolhead. Cleaned up filename + directory colors. Added basic M423 "X Twist Compensation" implementation: process is currently not supported via touchdisplay.

23 JUL 2024:
Fixed M423 "X Twist Compensation" basic implementation. Process is supported via host terminal.

27 JUL 2024:
Fixed probe bug that came with x twist compensation.

01 JAN 2025:
Changed filename display to rolling text with adjustable text speed. First 130 chars of filenames are on display, including umlaute. Added fan speed adjustment (before & during print). Added flow-rate adjustment (before & during print). Added restart function iot to set back all variables to power-up default state. Added extra settings dialog iot provide PID tuning for nozzles and hot-bed (Auto-PID & manual input are supported), extruder E-step adjustment & presets (pre-heat temperatures, stepper deactivation time and auto power-off enable/disable).

03 JAN 2025:
Minor changes in display handler iot avoid display hickups during host print. Added new G-Code command M1900 "Restart RTS display variables & reload from EEPROM". Added new G-Code command M1901 "Call RTS display screen directly". Released additional RTS display debug firmware version.

05 JAN 2025:
More changes in display handler iot avoid display hickups during host print. Modified G-Code command M1901 "Call RTS display screen directly". Released additional RTS display debug firmware version.

05 JAN 2025:
Fixed display software version in printer info screen.

15 JAN 2025:
Fixed offset float to integer conversion bug. Cleared preset values for X- and Y-offset: both offsets will be 0.0 after EEPROM reset. Added X-axis homing after tramming.

19 JAN 2025:
Modified tramming points & Z-alignment probe points for higher precison.