@@ -39,7 +39,9 @@ Based on the great work of bphillips09 & johncarlson21 and by inspiration of Jye
  - fixed offset float to integer conversion bug
  - cleared preset values for X- and Y-offset: both offsets will be 0.0 after EEPROM reset
  - added X-axis homing after tramming
- - modified tramming points & Z-alignment probe points for higher precison.
+ - modified tramming points & Z-alignment probe points for higher precison
+ - fixed touchscreen E-step adjustment not recognized bug
+ - fixed right extruder not moving bug in refuel & extruder E-step adjustment screens.
 
 
 This SV04 Marlin firmware requires matching touchscreen software v1.15.2 that is available here:
